--- a/client/cef/index.html
+++ b/client/cef/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Login / Register</title>
+        <title>RageTactics</title>
         <script src="js/jquery-3.3.1.min.js"></script>
         <link href="css/jquery-ui.min.css" rel="stylesheet"/>
         <script src="js/jquery-ui.min.js"></script>
 
+        <link type="text/css" rel="stylesheet" href="css/reset.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/font_awesome.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/iziToast.min.css"  media="screen,projection"/>
@@ -38,6 +39,69 @@
                 <div class="col s10 push-s1">
                   <button class="col s5 btn waves-effect waves-light green" onclick="Account.login()">Login</button>
                   <button class="col s5 push-s2 btn waves-effect waves-light deep-orange" onclick="Account.register()">Register</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="lobbies">
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/iB2vSF6.png"></img>
+                </div>
+                <div class="name">
+                    Testlobby
+                </div>
+                <div class="players">
+                    1 / 12
+                </div>
+                <div class="map">
+                    playground
+                </div>
+                <div class="id">
+                    #2040
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
+                </div>
+                <div class="name">
+                    Testlobby
+                </div>
+                <div class="players">
+                    1 / 12
+                </div>
+                <div class="map">
+                    playground
+                </div>
+                <div class="id">
+                    #2041
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
+                </div>
+            </div>
+            <div class="lobby">
+                <div class="background">
+                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
                 </div>
             </div>
         </div>
