--- a/client/cef/index.html
+++ b/client/cef/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <title>RageTactics</title>
-        <script src="js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
         <link href="css/jquery-ui.min.css" rel="stylesheet"/>
-        <script src="js/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+
+        <link type="text/css" rel="stylesheet" href="css/iziModal.css"  media="screen,projection"/>
+
+
 
         <link type="text/css" rel="stylesheet" href="css/reset.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/font_awesome.css"  media="screen,projection"/>
@@ -16,6 +20,10 @@
         <link href="css/style.css" rel="stylesheet"/>
     </head>
     <body>
+
+
+
+
         <div id="loading">
             <div></div><div></div><div></div><div></div>
         </div>
@@ -42,71 +50,69 @@
                 </div>
             </div>
         </div>
+        <div id="modal_lobby" class="modal_front" style="display:none">
+            <div class="window">
+                <div class="title">Lobby</div>
+                <div class="teams">
+                    <div class="info">Please select a team</div>
+                    <div class="list">
+                        <div class="team">
+                            <div class="name">
+                                Team Name #1
+                            </div>
+                            <div class="players">
+                                1 / 6
+                            </div>
+                        </div>
+                        <div class="team selected">
+                            <div class="name">
+                                Team Name #2
+                            </div>
+                            <div class="players">
+                               5 / 6
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <div class="button">
+                        Join
+                    </div>
+                    <div class="button red">
+                        Close
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
-        <div id="lobbies">
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/iB2vSF6.png"></img>
-                </div>
-                <div class="name">
-                    Testlobby
-                </div>
+        <div id="lobbies" style="display:none">
+            
+        </div>
+        <div id="lobby_waiting" style="display:none">
+            <div class="info">Waiting for players</div>
+            <div class="team">
+                <div class="name">Team #1</div>
+            </div>
+            <div class="team">
+                <div class="name">Team #2</div>
                 <div class="players">
-                    1 / 12
-                </div>
-                <div class="map">
-                    playground
-                </div>
-                <div class="id">
-                    #2040
-                </div>
-            </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
-                <div class="name">
-                    Testlobby
-                </div>
-                <div class="players">
-                    1 / 12
-                </div>
-                <div class="map">
-                    playground
-                </div>
-                <div class="id">
-                    #2041
+                    <div class="player">
+                        <div class="name">Extra ass long name as</div>
+                        <div class="ping">5200ms</div>
+                    </div>
+                    <div class="player">
+                        <div class="name">Z8pn</div>
+                        <div class="ping">52ms</div>
+                    </div>
                 </div>
             </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
-            </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
-            </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
-            </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
-            </div>
-            <div class="lobby">
-                <div class="background">
-                    <img src="https://i.imgur.com/RIOwDzd.png"></img>
-                </div>
+            <div class="team">
+                <div class="name">Team #3</div>
             </div>
         </div>
 
         <script src="js/app.js">
         </script>
+
     </body>
 </html>
