--- a/client/cef/index.html
+++ b/client/cef/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <script src="js/app.js">
+        <script src="js/app.js?v=6">
         </script>
 
     </body>
