interface getter etc

--- a/client/cef/index.html
+++ b/client/cef/index.html
@@ -22,8 +22,6 @@
     <body>
 
 
-
-
         <div id="loading">
             <div></div><div></div><div></div><div></div>
         </div>
@@ -32,7 +30,7 @@
 
             <div class="row" id="alert" style="display:none">
                 <div class="col s10 push-s1 red" id="alert_text">
-                    asdf
+
                 </div>
             </div>
             <div class="row">
@@ -87,13 +85,15 @@
         <div id="model_clobby" class="modal_front" style="display:none">
             <div class="window">
                 <div class="title">Create Lobby</div>
-                
-            </div>
+                <div class="content">
+                	<input class="mapName" id="mapName"></input>
 
+                </div>
+            </div>
         </div>
         <div id="lobby_view" style="display:none">
 	        <div id="lobbies" >
-	            
+
 	        </div>
 	        <div id="new" class="abs_button bottom_right">
 	        	NEW
